--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="/images/airbnb.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Airbnb-Experiences-Clone</title>
   </head>
   <body>
     <div id="root"></div>
